@@ -86,6 +86,11 @@ ul#chrome_menu a
 	width: 30px;
 }
 
+ul#chrome_menu a.news
+{
+	background: url('./icon-news.png') 50% 50% no-repeat;
+}
+
 ul#chrome_menu a.settings
 {
 	background: url('./icon-settings.png') 50% 50% no-repeat;
